--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,12 @@ body {
     z-index: -1;
 }
 
-/* .circle1.proactive{
+.circle1.proactive{
     width: 270px;
     height: 270px;
     top: 63%;
     left: 13%;
-} */
+}
 
 .circle2 {
     width: 350px;
@@ -113,10 +113,10 @@ body {
     z-index: -1;
 }
 
-/* .circle2.proactive{
+.circle2.proactive{
     top: 47%;
     left: 90%;
-} */
+}
 .noise{
     display: none;
     position: absolute;
